--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <title>eagis</title>
 </head>
-<body class="h-screen">
+<body>
     <header id="eagis-header">
         <div class="m-auto py-6 w-32"><img src="images/eagis-icon-700.svg" alt="eagis"></div>
     </header>
