:art: HTML CSSの一部変更

--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
     <title>eagis</title>
 </head>
 <body>
-    <header id="eagis-header">
-        <div class="m-auto py-6 w-32"><img src="images/eagis-icon-700.svg" alt="eagis"></div>
+    <header>
+        <div class="wrapper-icon">
+            <a href="#">
+                <img id="top-icon" src="/images/eagis-icon-700.png" alt="">
+            </a>
+        </div>
+        <div class="wrapper-list">
+            <ul id="header-list">
+                <li id="company">
+                    <a href="!">company</a>
+                </li>
+                <li id="member">
+                    <a href="!">member</a>
+                </li>
+                <li id="about">
+                    <a href="!">about</a>
+                </li>
+                <li id="twitter">
+                    <a href="!">twitter</a>
+                </li>
+                <li id="discord">
+                    <a href="!">discord</a>
+                </li>
+            </ul>
+        </div>
     </header>
-    <div class="eagis-top">
-        <div class="mt-64 text-center text-4xl font-semibold text-white">
-            <div>Security on Web3</div>
-            <div class="mt-6">with eagis</div>
-        </div>
-        <div class="mt-10 text-center text-4xl font-semibold">
-            <div class="white-border">Eazy to get Aegis with eagis</div>
-        </div>
-    </div>
-    <div class="eagis-circle">
-        <img class="mx-auto" src="images/eagis-icon.svg" alt="">
-    </div>
 </body>
 </html>
