:art: ページ全体の調節 :sparkles: ドキュメントへのリンクを追加

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./index.css">
         <title>eagis</title>
+        <!-- ja   eagis - Web3のセキュリティツール -->
+        <!-- en   eagis - easy to get Aegis of Web3 security with eagis -->
     </head>
     <body>
         <div id="app"></div>
