--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
         <title>eagis</title>
         <!-- ja   eagis - Web3のセキュリティツール -->
         <!-- en   eagis - easy to get Aegis of Web3 security with eagis -->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY0WHHMV4Y"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-ZY0WHHMV4Y');
+        </script>
     </head>
     <body>
         <div id="app"></div>
