:art: OGP画像を設定

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
+    <head prefix="og: http://ogp.me/ns#">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" lang="ja" content="Webサイト判定やNFT真贋鑑定を行なうWeb3セキュリティツール。Chrome拡張機能で完全無料で利用できます。" />
         <meta name="description" lang="en" content="Easy to get Aegis with eagis. This is a security tool to protect you from NFT scams and phishing Websites. You can get this on Chrome Web Store as free." />
+        <meta property="og:image" content="https://eag.is/ogp.png" />
         <link rel="stylesheet" href="./index.css">
         <title>eagis</title>
 
